--- a/news-item.html
+++ b/news-item.html
@@ -16,7 +16,7 @@
     <div class="container">
         <h1>АО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100</h1>
         <div class="row">
-            <div class="col-md-8 offset-xl-2">
+            <div class="col-lg-8 offset-xl-2">
                 <div class="news-date">22/04/2019</div>
                 <div class="news-descr">
                     <p>Клапаны обратные КО 100 изготавливаются в соответствие с ТУ У В.2.5-29.1-24472991-018:2006 и предназначены для предотвращения перетекания воздуха и
@@ -53,7 +53,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-2 order-first order-md-2">
+            <div class="col-lg-2 order-first order-lg-2">
                 <div class="gradient-btn">
                     <a href="" download="">
                         <i class="fas fa-file"></i>Скачать</a>
