--- a/index.html
+++ b/index.html
@@ -50,70 +50,69 @@
                         <li class="nav-item">
                             <a class="nav-link">О компании</a>
                             <div class="drop-menu">
-                                <a class="dropdown-item" href="#">О нас</a>
-                                <a class="dropdown-item" href="#">Производство</a>
-                                <a class="dropdown-item" href="#">Сервис</a>
-                                <a class="dropdown-item" href="#">Стендовые испытания</a>
-                                <a class="dropdown-item" href="#">Вакансии</a>
+                                <a class="dropdown-item" href="about.html">О нас</a>
+                                <a class="dropdown-item" href="about.html">Производство</a>
+                                <a class="dropdown-item" href="about.html">Сервис</a>
+                                <a class="dropdown-item" href="about.html">Стендовые испытания</a>
+                                <a class="dropdown-item" href="a">Вакансии</a>
                             </div>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link">Каталог</a>
                             <div class="drop-menu with-columns">
                                 <div class="menu-column">
-                                    <a class="dropdown-item" href="#">Общепромышленная вентиляция </a>
+                                    <a class="dropdown-item" href="catalog.html">Общепромышленная вентиляция </a>
                                     <ul>
-                                        <li><a href=" ">Вентиляторы радиальные</a></li>
-                                        <li><a href="">Вентиляторы крышные</a></li>
-                                        <li><a href="">Вентиляторы осевые</a></li>
-                                        <li><a href="">Вентиляторы канальные</a></li>
+                                        <li><a href="catalog.html">Вентиляторы радиальные</a></li>
+                                        <li><a href="catalog.html">Вентиляторы крышные</a></li>
+                                        <li><a href="catalog.html">Вентиляторы осевые</a></li>
+                                        <li><a href="catalog.html">Вентиляторы канальные</a></li>
                                     </ul>
-                                    <a class="dropdown-item" href="#">Противопожарное оборудование </a>
+                                    <a class="dropdown-item" href="catalog.html">Противопожарное оборудование </a>
                                     <ul>
-                                        <li><a href=" ">Вентиляторы дымоудаления </a></li>
-                                        <li><a href="">Клапаны дымоудаления</a></li>
-                                        <li><a href="">Клапаны огнезадерживающие</a></li>
+                                        <li><a href="catalog.html">Вентиляторы дымоудаления </a></li>
+                                        <li><a href="catalog.html">Клапаны дымоудаления</a></li>
+                                        <li><a href="catalog.html">Клапаны огнезадерживающие</a></li>
                                     </ul>
-                                    <a class="dropdown-item" href="#">Оборудование для монтажа вентиляторов </a>
+                                    <a class="dropdown-item" href="catalog.html">Оборудование для монтажа вентиляторов </a>
                                     <ul>
-                                        <li><a href=" ">Стаканы</a></li>
-                                        <li><a href="">Виброизоляторы и гибкие вставки</a></li>
+                                        <li><a href="catalog.html">Стаканы</a></li>
+                                        <li><a href="catalog.html">Виброизоляторы и гибкие вставки</a></li>
                                     </ul>
                                 </div>
                                 <div class="menu-column">
-                                    <a class="dropdown-item" href="#">Кондиционеры центральные каркасные КЦК</a>
-                                    <a class="dropdown-item" href="#">Сетевое оборудование</a>
+                                    <a class="dropdown-item" href="catalog.html">Кондиционеры центральные каркасные КЦК</a>
+                                    <a class="dropdown-item" href="catalog.html">Сетевое оборудование</a>
                                     <ul>
-                                        <li><a href=" ">Клапаны и заслонки </a></li>
-                                        <li><a href="">Узлы прохода, дефлекторы, зонты, двери, шумоглушители </a></li>
-                                        <li><a href="">Фильтры, ИРП</a></li>
+                                        <li><a href="catalog.html">Клапаны и заслонки </a></li>
+                                        <li><a href="catalog.html">Узлы прохода, дефлекторы, зонты, двери, шумоглушители </a></li>
+                                        <li><a href="catalog.html">Фильтры, ИРП</a></li>
                                     </ul>
-                                    <a class="dropdown-item" href="#">Автоматизация </a>
-                                    <a class="dropdown-item" href="#">Отопительное оборудование </a>
+                                    <a class="dropdown-item" href="catalog.html">Автоматизация </a>
+                                    <a class="dropdown-item" href="catalog.html">Отопительное оборудование </a>
                                     <ul>
-                                        <li><a href=" ">Агрегаты воздушно-отопительные </a></li>
-                                        <li><a href="">Воздухонагреватель (калориферы) </a></li>
+                                        <li><a href="catalog.html">Агрегаты воздушно-отопительные </a></li>
+                                        <li><a href="catalog.html">Воздухонагреватель (калориферы) </a></li>
                                     </ul>
-                                    <a class="dropdown-item" href="#">Скачать каталоги</a>
+                                    <a class="dropdown-item" href="catalog.html">Скачать каталоги</a>
                                 </div>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Программы подбора</a>
+                            <a class="nav-link" href="program.html">Программы подбора</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Сертификаты</a>
+                            <a class="nav-link" href="certificates.html">Сертификаты</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Новости</a>
+                            <a class="nav-link" href="news.html">Новости</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link">Контакты</a>
                             <div class="drop-menu">
-                                <a class="dropdown-item" href="#">1</a>
-                                <a class="dropdown-item" href="#">2</a>
-                                <a class="dropdown-item" href="#">3</a>
-                                <a class="dropdown-item" href="#">4</a>
+                                <a class="dropdown-item" href="contacts.html">Главный офис</a>
+                                <a class="dropdown-item" href="offices.html">Представительства</a>
+
                             </div>
                         </li>
                     </ul>
@@ -205,7 +204,7 @@
     <section class="container home-catalog">
         <h1>Каталог</h1>
         <div class="catalog-grid">
-            <div class="card"><a href="">
+            <div class="card"><a href="catalog.html">
                 <img src="media/home-catalog/4.png" alt="">
                 <p>Общепромышленная вентиляция</p>
                 <div class="go-corner">
@@ -213,7 +212,7 @@
                 </div>
             </a>
             </div>
-            <div class="card"><a href="">
+            <div class="card"><a href="catalog.html">
                 <img src="media/home-catalog/91.png" alt="">
                 <p>Противопожарное оборудование</p>
                 <div class="go-corner">
@@ -222,7 +221,7 @@
             </a>
             </div>
 
-            <div class="card"><a href="">
+            <div class="card"><a href="catalog.html">
                 <img src="media/home-catalog/100.png" alt="">
                 <p>Оборудование для монтажа вентиляторов</p>
                 <div class="go-corner">
@@ -232,7 +231,7 @@
             </div>
 
 
-            <div class="card"><a href="">
+            <div class="card"><a href="catalog.html">
                 <img src="media/home-catalog/category10.png" alt="">
                 <p>Кондиционеры центральные каркасные КЦК</p>
                 <div class="go-corner">
@@ -241,7 +240,7 @@
             </a>
             </div>
 
-            <div class="card"><a href="">
+            <div class="card"><a href="catalog.html">
                 <img src="media/home-catalog/74.png" alt="">
                 <p>Сетевое оборудование</p>
                 <div class="go-corner">
@@ -251,7 +250,7 @@
             </div>
 
 
-            <div class="card"><a href="">
+            <div class="card"><a href="catalog.html">
                 <img src="media/home-catalog/category12.png" alt="">
                 <p>Автоматизация</p>
                 <div class="go-corner">
@@ -260,7 +259,7 @@
             </a>
             </div>
 
-            <div class="card"><a href="">
+            <div class="card"><a href="catalog.html">
                 <img src="media/home-catalog/5.png" alt="">
                 <p>Отопительное оборудование</p>
                 <div class="go-corner">
@@ -269,7 +268,7 @@
             </a>
             </div>
 
-            <div class="card"><a href="">
+            <div class="card"><a href="catalog.html">
                 <img src="media/home-catalog/74.png" alt="">
                 <p>Скачать каталоги</p>
                 <div class="go-corner">
@@ -289,7 +288,7 @@
                     <span>24/04/2019</span>
                     <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
                         сечения КО 100</p>
-                    <a class="link link--arrowed" href="#">
+                    <a class="link link--arrowed" href="news-item.html">
                         <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                             <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                 <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
@@ -302,7 +301,7 @@
                     <span>24/04/2019</span>
                     <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
                         сечения КО 100</p>
-                    <a class="link link--arrowed" href="">
+                    <a class="link link--arrowed" href="news-item.html">
                         <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                             <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                 <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
@@ -318,7 +317,7 @@
                             <p>ЧАО  "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
                                 круглого сечения КО 100</p>
                         </div>
-                        <a class="link link--arrowed" href="">
+                        <a class="link link--arrowed" href="news-item.html">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                 <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                     <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
@@ -335,7 +334,7 @@
                                 круглого сечения КО 100</p>
                         </div>
 
-                        <a class="link link--arrowed" href="">
+                        <a class="link link--arrowed" href="news-item.html">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                 <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                     <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
@@ -349,7 +348,7 @@
         </div>
     </section>
     <div class="news-page-link">
-        <a href="#" class="cta">
+        <a href="news.html" class="cta">
             <span>все новости</span>
             <img src="media/Arrow-sm-violet.svg" alt="">
         </a>
@@ -358,7 +357,7 @@
 <footer>
     <div class="container">
         <div class="footer-logo">
-            <a href="">
+            <a href="#">
                 <img src="media/logo-white.svg" alt="">
             </a>
         </div>
