--- a/news.html
+++ b/news.html
@@ -15,30 +15,51 @@
 <main class="news">
     <div class="container">
         <h1>Новости</h1>
-        <div class="news-grid">
+        <div class="news-flex">
             <div class="card">
                 <img src="media/home-newes1.png" alt="">
                 <span>24/04/2019</span>
                 <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
                     сечения КО 100</p>
-                <a href=""></a></div>
+                <a class="link--arrowed" href="news-item.html">
+                    <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                            <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                            <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                        </g>
+                    </svg>
+                </a></div>
             <div class="card">
                 <img src="" alt="">
                 <span>24/04/2019</span>
                 <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
                     сечения КО 100</p>
-                <a href=""></a></div>
+                <a class="link--arrowed" href="news-item.html">
+                    <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                            <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                            <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                        </g>
+                    </svg>
+                </a></div>
             <div class="card-column">
-                <div class="card card-sm">
+                <div class="card-sm">
                     <img src="media/home-newes1.png" alt="">
                     <div>
                         <span>24/04/2019</span>
                         <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
                             круглого сечения КО 100</p>
                     </div>
-                    <a href=""></a>
+                    <a class="link--arrowed" href="news-item.html">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                            </g>
+                        </svg>
+                    </a></a>
                 </div>
-                <div class="card card-sm">
+                <div class="card-sm">
                     <!--                    <img src="" alt="">-->
                     <div>
                         <span>24/04/2019</span>
@@ -46,22 +67,36 @@
                             круглого сечения КО 100</p>
                     </div>
 
-                    <a href=""></a>
+                    <a class="link--arrowed" href="news-item.html">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                            </g>
+                        </svg>
+                    </a></a>
                 </div>
             </div>
         </div>
-        <div class="news-grid">
+        <div class="news-flex">
             <div class="card-column">
-                <div class="card card-sm">
+                <div class="card-sm">
                     <img src="media/home-newes1.png" alt="">
                     <div>
                         <span>24/04/2019</span>
                         <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
                             круглого сечения КО 100</p>
                     </div>
-                    <a href=""></a>
+                    <a class="link--arrowed" href="news-item.html">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                            </g>
+                        </svg>
+                    </a></a>
                 </div>
-                <div class="card card-sm">
+                <div class="card-sm">
                     <!--                    <img src="" alt="">-->
                     <div>
                         <span>24/04/2019</span>
@@ -69,7 +104,14 @@
                             круглого сечения КО 100</p>
                     </div>
 
-                    <a href=""></a>
+                    <a class="link--arrowed" href="news-item.html">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                            </g>
+                        </svg>
+                    </a></a>
                 </div>
             </div>
             <div class="card">
@@ -77,46 +119,87 @@
                 <span>24/04/2019</span>
                 <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
                     сечения КО 100</p>
-                <a href=""></a></div>
+                <a class="link--arrowed" href="news-item.html">
+                    <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                            <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                            <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                        </g>
+                    </svg>
+                </a></div>
             <div class="card">
                 <img src="" alt="">
                 <span>24/04/2019</span>
                 <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
                     сечения КО 100</p>
-                <a href=""></a></div>
+                <a class="link--arrowed" href="news-item.html">
+                    <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                            <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                            <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                        </g>
+                    </svg>
+                </a></div>
         </div>
-        <div class="news-grid">
+        <div class="news-flex">
             <div class="card">
                 <img src="media/home-newes1.png" alt="">
                 <span>24/04/2019</span>
                 <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
                     сечения КО 100</p>
-                <a href=""></a></div>
+                <a class="link--arrowed" href="news-item.html">
+                    <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                            <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                            <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                        </g>
+                    </svg>
+                </a></div>
             <div class="card">
                 <img src="" alt="">
                 <span>24/04/2019</span>
                 <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
                     сечения КО 100</p>
-                <a href=""></a></div>
+                <a class="link--arrowed" href="news-item.html">
+                    <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                            <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                            <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                        </g>
+                    </svg>
+                </a></div>
             <div class="card-column">
-                <div class="card card-sm">
+                <div class="card-sm">
                     <img src="media/home-newes1.png" alt="">
                     <div>
                         <span>24/04/2019</span>
                         <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
                             круглого сечения КО 100</p>
                     </div>
-                    <a href=""></a>
+                    <a class="link--arrowed" href="news-item.html">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                            </g>
+                        </svg>
+                    </a>
                 </div>
-                <div class="card card-sm">
+                <div class="card-sm">
                     <!--                    <img src="" alt="">-->
                     <div>
                         <span>24/04/2019</span>
                         <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
                             круглого сечения КО 100</p>
                     </div>
-
-                    <a href=""></a>
+                    <a class="link--arrowed" href="news-item.html">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                            </g>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </div>
@@ -132,12 +215,14 @@
 <footer>
     <div class="container">
         <div class="footer-logo">
-            <img src="media/logo-white.svg" alt="">
+            <a href="#">
+                <img src="media/logo-white.svg" alt="">
+            </a>
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-sm-8 col-lg-3">
                 <div class="address">
-                    Украина, г. Харьков, ул. Енакиевская, 17
+                    Украина, г. Харьков, <br> ул. Енакиевская, 17
                 </div>
                 <div class="mail">
                     <a href="mailto:intercon@traffic.net.ua">
@@ -145,7 +230,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-sm-4 col-lg-3">
                 <div class="phones">
                     <a href="tel:+380577780639">+38 (057) 778 06 39</a>
                     <a href="tel:+380577780644">+38 (057) 778 06 44</a>
@@ -153,7 +238,7 @@
                     <a href="tel:0800408409">0 800 408 409</a>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="footer-info">
                      <span>
                     &copy; 2009 -
