--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -28,7 +29,7 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 offset-xl-2">
+            <div class="col-lg-8 offset-lg-2">
                 <h2>ЧАО «Интеркондиционер» - предприятие новой Украины, является крупнейшим производителем кондиционеров, систем промышленной вентиляции и кондиционирования,
                     дымоудаления,
                     воздушного отопления и выполняет работы по изготовлению промышленного вентиляционного оборудования, его наладке и технического обслуживания.</h2>
@@ -43,12 +44,34 @@
             <div><img src="media/about-img3.png" alt=""></div>
             <div><img src="media/about-img1.png" alt=""></div>
         </div>
+        <div class="about-slider-arrows banner_paginator">
+            <div class="prev">
+                        <span class="link--arrowed">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                    <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                    <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                                </g>
+                            </svg>
+                        </span>
+            </div>
+            <div class="next">
+                        <span class="link--arrowed">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                    <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                    <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                                </g>
+                            </svg>
+                        </span>
+            </div>
+        </div>
     </div>
     <div class="history">
         <div class="container">
             <h1>История и характеристика предприятия</h1>
             <div class="row">
-                <div class="col-lg-8 offset-xl-2">
+                <div class="col-lg-8 offset-lg-2">
                     <p>ЧАО «Интеркондиционер» создано в 1996 году, располагается в промышленной зоне крупнейшего индустриального города Украины – Харькова. На площади 1,5 га.
                         построено три
                         современных производственных корпуса и пять зданий для обслуживания, общей площадью более 10000 м2. </p>
@@ -112,6 +135,7 @@
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/jquery.fancybox.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
