--- a/program.html
+++ b/program.html
@@ -16,7 +16,7 @@
     <div class="container">
         <h1>Программы подбора</h1>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-xl-6 mb-5 mb-xl-0">
                 <div class="program-descr-wrap">
                     <h2>Программа подбора Design Conditioner кондиционеров КЦК</h2>
                     <div class="d-lg-none">Программа предназначена для DeskTop версии. Мобильная версия находится в разработке.</div>
@@ -36,7 +36,7 @@
 
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-xl-6">
                 <div class="program-descr-wrap">
                     <h2>Программа Fans</h2>
                     <div class="d-lg-none">Программа предназначена для DeskTop версии. Мобильная версия находится в разработке.</div>
