--- a/index.html
+++ b/index.html
@@ -20,16 +20,12 @@
             <div class="logo"><img src="media/logo.svg" alt=""></div>
             <div class="logo-sm"><img src="media/logo-sm.svg" alt=""></div>
             <div class="header-top-right">
-                <div class="phones-sm">
+                <div class="phones-block">
                     <a href="tel:+380577780644">+38 (057) 778 06 44</a>
                     <a href="tel:+380577780645">+38 (057) 778 06 45</a>
                     <div class="more_btn"></div>
-
-                    <div class="phones-lg">
-
-                    </div>
                 </div>
-                <div class="location">
+                <div class="location" id="location">
                     <a href="" class="active">Рус</a> |
                     <a href="">Укр</a>
                 </div>
@@ -38,10 +34,16 @@
     </div>
     <div class="header-btm">
         <div class="container">
+            <div class="logo"><img src="media/logo.svg" alt=""></div>
             <div class="logo-sm"><img src="media/logo-sm.svg" alt=""></div>
-
             <nav class="navbar-expand-xl navbar-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false"
+                <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#navbar"
+                        aria-controls="navbar"
+                        aria-expanded="false"
                         aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -118,9 +120,8 @@
                     </ul>
                 </div>
             </nav>
-
             <div class="search-btn open-search"></div>
-            <div class="form-btn gradient-btn">ЗАДАТЬ ВОПРОС</div>
+            <div class="form-btn gradient-btn" id="ask-btn">ЗАДАТЬ ВОПРОС</div>
             <div class="contact-form">
                 <p>Вы можете задать вопрос, заполнив форму, и наши менеджеры ответят вам в самое ближайшее время!</p>
                 <span class="form-btn">
@@ -193,7 +194,18 @@
 
             </div>
         </div>
-        <div></div>
+        <div class="banner">
+            <div class="container">
+                <div>
+                    <h1>Проектирование, производство, монтаж и сервисное обслуживание</h1>
+                    <p>систем кондиционирования, вентиляции, дымоудаления и воздушного отопления. Кондиционеры КТЦ, вентиляторы ВР и ВК, клапаны, заслонки и воздушные фильтры</p>
+                </div>
+                <div>
+                    <img src="media/main-banner-img.png" alt="">
+                </div>
+
+            </div>
+        </div>
     </div>
     <div class="top_banner_slider_arrowsBox">
         <div class="prev_btn"></div>
@@ -314,7 +326,7 @@
                         <img src="media/home-newes1.png" alt="">
                         <div>
                             <span>24/04/2019</span>
-                            <p>ЧАО  "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
+                            <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
                                 круглого сечения КО 100</p>
                         </div>
                         <a class="link link--arrowed" href="news-item.html">
