--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         aria-controls="navbar"
                         aria-expanded="false"
                         aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <img src="media/burger.svg" alt=""></span>
                 </button>
                 <div class="collapse navbar-collapse " id="navbar">
                         <button
